don't pass group ID to get repositories call
